# M1_IPC_THREADS_PARALELISMO

./: CMakeLists.txt  README.md
include/: common.hpp
src/: sender.cpp  worker.cpp
